--- a/FinalProject (1).ipynb
+++ b/FinalProject (1).ipynb
@@ -1363,7 +1363,7 @@
     "## What the graph shows \n",
     "I looked at just large-cap stocks to see if the AM signal still worked. I grouped the stocks into 5 levels based on their AM score.\n",
     "\n",
-    "The ones with higher scores (especially group 5) lost less money during 2008. So the signal still helped, even in a bad year."
+    "The results show that higher-scoring stocks (especially Group 5) actually performed worse in 2008. So for large-cap stocks, the AM signal did not seem helpful that year — it may have been misleading during the market crash."
    ]
   },
   {
